Added updated code

--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -1,1 +1,1 @@
-MONGO_URI=""
+MONGO_URI=mongodb+srv://parmarabhishrut:J0lAkob9qFZWQjMs@mess.4tnci.mongodb.net/Mess?retryWrites=true&w=majority&appName=mess
