Authentication, Authorization and Menu_completed

--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -1,1 +1,2 @@
-MONGO_URI=mongodb+srv://parmarabhishrut:J0lAkob9qFZWQjMs@mess.4tnci.mongodb.net/Mess?retryWrites=true&w=majority&appName=mess
+MONGODB=mongodb+srv://parmarabhishrut:J0lAkob9qFZWQjMs@mess.4tnci.mongodb.net/Mess?retryWrites=true&w=majority&appName=mess
+JWT_SECRET="1234567890"
