--- a/FrontEnd/frontend/package.json
+++ b/FrontEnd/frontend/package.json
@@ -10,6 +10,10 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.9",
+    "face-api.js": "^0.22.2",
+    "qrcode.react": "^4.2.0",
+    "razorpay": "^2.9.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
