--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -19,6 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
     "nodemailer": "^6.10.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "qrcode": "^1.5.4",
+    "uuid": "^11.1.0"
   }
 }
