Admin Panel Started

--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -1,2 +1,2 @@
-MONGODB=mongodb+srv://parmarabhishrut:J0lAkob9qFZWQjMs@mess.4tnci.mongodb.net/Mess?retryWrites=true&w=majority&appName=mess
+MONGODB=""
 JWT_SECRET="1234567890"
