--- a/FrontEnd/frontend/package.json
+++ b/FrontEnd/frontend/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
