--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "qrcode": "^1.5.4",
+    "razorpay": "^2.9.6",
     "uuid": "^11.1.0"
   }
 }
