--- a/FrontEnd/frontend/package.json
+++ b/FrontEnd/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.1",
