--- a/FrontEnd/frontend/package.json
+++ b/FrontEnd/frontend/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mantine/core": "^7.17.0",
     "@mantine/hooks": "^7.17.0",
+    "@mui/material": "^6.4.6",
     "@tabler/icons-react": "^3.30.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
